--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@ algorithms etc.).
         Research papers
 </h3>
 
+
+<p> Most of my papers are available online, others can be freely accessed upon request via <a href="#email">email</a> </p>
+
 The list of my scientific papers is also available at
 <a href="https://scholar.google.com/citations?user=iIsjHwEAAAAJ&hl=en">Google Scholar</a>,
 <a href="https://www.researchgate.net/profile/I-Sergeev-3/research">Researchgate</a>,
@@ -174,6 +177,7 @@ The list of my scientific papers is also available at
    <a href="https://web.vu.lt/mif/s.jukna/index.html">Stasys Jukna</a>,
    <a href="https://www.mathnet.ru/php/person.phtml?option_lang=eng&personid=27870">Mikhail I. Grinchuk</a>
 </p>
+
 
 <p> <a name="p41"></a> </p>
 
@@ -797,7 +801,7 @@ Matematicheskie Zametki</i>)
 <p> <a name="p10"></a></p>
 
 <div class="cite">
-<font color="300080">[10]</font> Gashkov S. B., Sergeev I. S. <i><font color="300080"> Algorithms for the Fast Fourier Transform.</font></i>
+<font color="300080">[10]</font> Gashkov S. B., Sergeev I. S. <i><font color="300080"> Algorithms for the fast Fourier transform.</font></i>
     in &#8220Diskretnaya Matematika i eyo Prilozheniya&#8221 (Discrete Mathematics and its Applications). Part V. Moscow: Izd. IPM RAN, 2009, 3-23.
     <a href="./papers/fft_ipm.pdf">PDF</a> (in Russian) with additional comments
 </div>
@@ -968,6 +972,7 @@ Matematicheskie Zametki</i>)
 
     <br> DMTCS &#8211 &#8220Discrete Models in the Theory of Control Systems&#8221 conference
     <br> IMT &#8211 &#8220Information Means and Technology&#8221 conference
+    <br> NTA &#8211 conference to the memory of A. A. Karatsuba on Number Theory and Applications
     <br> PTK &#8211 &#8220Problems of Theoretical Cybernetics&#8221 conference
     <br> sPTK &#8211 online seminar of the &#8220Problems of Theoretical Cybernetics&#8221 conference
     <br> SCCS &#8211 school-seminar &#8220Synthesis and Complexity of Control Systems&#8221
@@ -991,8 +996,35 @@ doctoral dissertation (Dr.Habil): <i><font color="300080">Some problems of synth
 <a href="./papers/diss2021.pdf">PDF</a> (in Russian) <a href="https://istina.msu.ru/dissertations/378944357">web-page</a>
 </div>
 
+<h3>
+        Plenary talks  <a name="talks"></a>
+</h3>
+
+<div class="cite">
+Gashkov S. B., Sergeev I. S. <i><font color="006030"> Algorithms for the fast Fourier transform.</font></i> yDMA'7 (Moscow, 2009).  see [<a href="#p10">10</a>]
+</div>
+
+<p> </p>
+
+<div class="cite">
+Gashkov S. B., Sergeev I. S. <i><font color="006030"> Complexity of computation of polynomials.</font></i> PTK'16 (Nizhny Novgorod, 2011).  <a href="./papers/slides2011.pdf">slides</a> (in Russian)
+</div>
+
+<p> </p>
+
+<div class="cite">
+Gashkov S. B., Sergeev I. S. <i><font color="006030"> On the arithmetic complexity of some linear mappings.</font></i> NTA'3 (Moscow, 2016).  <a href="./papers/slides2016.pdf">slides</a>
+</div>
+
+<p> </p>
+
+<div class="cite">
+Sergeev I. S. <i><font color="006030"> Complexity of linear boolean operators.</font></i> PTK'19 (online, 2021).  <a href="./papers/slides2021.pdf">slides</a> (in Russian)
+</div>
+
 <hr>
 
+<a name="email"></a>
 <img src="./pics/email.jpg" width="200">
 
 <p> <a href="#top">return to the top</a> </p>
