--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,7 @@ Gashkov S. B., Sergeev I. S. <i><font color="006030"> Complexity of computation 
 <p> </p>
 
 <div class="cite">
-Gashkov S. B., Sergeev I. S. <i><font color="006030"> On the arithmetic complexity of some linear mappings.</font></i> NTA'3 (Moscow, 2016).  <a href="./papers/slides2016.pdf">slides</a>
+Gashkov S. B., Sergeev I. S. <i><font color="006030"> On the arithmetic complexity of some linear mappings.</font></i> <a href="https://www.mathnet.ru/php/conference.phtml?confid=773&option_lang=eng">NTA'3</a> (Moscow, 2016).  <a href="./papers/slides2016.pdf">slides</a>
 </div>
 
 <p> </p>
