--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ algorithms etc.).
        Short bio
 </h3>
 
-<table cols="2">
+<table cols="3">
         <tbody>
                 <tr>
                         <td> 1981 </td>
@@ -1021,6 +1021,68 @@ Gashkov S. B., Sergeev I. S. <i><font color="006030"> On the arithmetic complexi
 <div class="cite">
 Sergeev I. S. <i><font color="006030"> Complexity of linear boolean operators.</font></i> PTK'19 (online, 2021).  <a href="./papers/slides2021.pdf">slides</a> (in Russian)
 </div>
+
+
+<h3>
+        Lections  <a name="lect"></a>
+</h3>
+
+Gashkov S. B., Sergeev I. S. <i><font color="006030"> Complexity of computations.</font></i> (MSU, 2011/2012). partially written (in Russian)
+
+<table cols="3">
+        <tbody>
+                <tr>
+                        <td>  </td>
+                        <td> <a href="./papers/programCC2012.pdf">program</a> </td>
+                        <td>  </td>
+                </tr>        
+                <tr>
+                        <td> 1 </td>
+                        <td> Addition chains </td>
+                        <td> <a href="./papers/lection1.pdf">pdf</a> </td>
+                </tr>
+               <tr>
+                        <td> 2 </td>
+                        <td> Adders </td>
+                        <td> <a href="./papers/lection2.pdf">pdf</a> </td>
+                </tr>                
+               <tr>
+                        <td> 3 </td>
+                        <td> Discrete Fourier transform </td>
+                        <td> <a href="./papers/lection3.pdf">pdf</a> </td>
+                </tr>   
+               <tr>
+                        <td> 4.1-2 </td>
+                        <td> Multiplication of numbers </td>
+                        <td> <a href="./papers/lection4.pdf">pdf</a> </td>
+                </tr>     
+               <tr>
+                        <td> 4.3 </td>
+                        <td> F&#252rer's method </td>
+                        <td> <a href="./papers/lection4f.pdf">pdf</a> </td>
+                </tr>                  
+               <tr>
+                        <td> 5 </td>
+                        <td> Division of numbers and polynomials </td>
+                        <td> <a href="./papers/lection5.pdf">pdf</a> </td>
+                </tr>    
+               <tr>
+                        <td> 6.2 </td>
+                        <td> Logarithm and exponential </td>
+                        <td> <a href="./papers/lection6e.pdf">pdf</a> </td>
+                </tr>  
+               <tr>
+                        <td> 7 </td>
+                        <td> GCD of polynomials </td>
+                        <td> <a href="./papers/lection7.pdf">pdf</a> </td>
+                </tr>               
+               <tr>
+                        <td> 8 </td>
+                        <td> Factorial </td>
+                        <td> <a href="./papers/lection8.pdf">pdf</a> </td>
+                </tr>                                                                       
+       </tbody>
+</table>
 
 <hr>
 
