--- a/index.html
+++ b/index.html
@@ -187,8 +187,10 @@ The list of my scientific papers is also available at
 </div>
 
 <div class="comm">
- &#9672 We prove a few results on the additive complexity. (i) We improve a third term in the N. Pippenger's upper bound (1980) on the complexity of the class of
-<font face="serif"><i>m</i>&times<i>n</i></font> matrices with bounded coefficients from <font face="serif">...+<i>O</i>(<i>m</i>+<i>n</i>)</font> to <font face="serif">...+<i>n</i></font>, and it is tight. Principally, it follows from [<a href="#p29">29</a>]. (ii) We obtain a tight asymptotic complexity of the sequence <font face="serif">{2, 2<sup>2</sup>, ..., 2<sup><i>n</i>-1</sup>, 2<sup><i>n</i></sup>-1</font>} improving non-matching bounds by P. Downey, B. Leong, R. Sethi (1981). (iii) D. Dobkin and R. J. Lipton (1980) for an explicitly given polynomially bounded sequence of size <font face="serif"><i>n</i></font> proved a lower bound <font face="serif"><i>n</i>+<i>n</i><sup>2/3-<i>o</i>(1)</sup></font>. We construct explicit sequences of size <font face="serif"><i>n</i></font>: (a) of polynomially bounded numbers, and of complexity <font face="serif"><i>n</i>+<i>&#937</i>(<i>n</i><sup>1-<i>&#949</i></sup>)</font>, for any <font face="serif"><i>&#949</i>>0</font>; (b) of numbers bounded by <font face="serif"><i>n</i><sup><i>O</i>(log <i>n</i>)</sup></font>, and of complexity <font face="serif"><i>n</i>+<i>&#937</i>(<i>n</i>)</font>.
+ &#9672 The paper contains a few results on the additive complexity. (i) We improve the N. Pippenger's upper bound (1980) on the complexity of the class of
+<font face="serif"><i>m</i>&times<i>n</i></font> matrices with bounded by <font face="serif"><i>q</i></font> coefficients in a linear term from
+<font face="serif"><i>A</i>+<i>O</i>(<i>m</i>+<i>n</i>)</font> to <font face="serif"><i>A</i>+<i>n</i></font>, where
+<font face="serif"><i>A</i> = min(<i>m</i>, <i>n</i>)log<sub>2</sub><i>q</i>+(1+<i>o</i>(1))<i>H</i>/log<sub>2</sub><i>H</i></font>, and <font face="serif"><i>H</i>=<i>mn</i>log<sub>2</sub><i>q</i></font>, and it is tight. Principally, it follows from [<a href="#p29">29</a>]. (ii) For the sequence <font face="serif">{2, 2<sup>2</sup>, ..., 2<sup><i>n</i>-1</sup>, 2<sup><i>n</i></sup>-1}</font>, we obtain a tight asymptotic complexity <font face="serif">~2<i>n</i><sup>1/2</sup></font> improving non-matching bounds by P. Downey, B. Leong, R. Sethi (1981). (iii) D. Dobkin and R. J. Lipton (1980) for an explicitly given polynomially bounded sequence of size <font face="serif"><i>n</i></font> proved a lower bound <font face="serif"><i>n</i>+<i>n</i><sup>2/3-<i>o</i>(1)</sup></font>. We construct explicit sequences of size <font face="serif"><i>n</i></font>: (a) of polynomially bounded numbers, and of complexity <font face="serif"><i>n</i>+<i>&#937</i>(<i>n</i><sup>1-<i>&#949</i></sup>)</font>, for any <font face="serif"><i>&#949</i>>0</font>; (b) of numbers bounded by <font face="serif"><i>n</i><sup><i>O</i>(log <i>n</i>)</sup></font>, and of complexity <font face="serif"><i>n</i>+<i>&#937</i>(<i>n</i>)</font>.
  </div>
 
 <p> <a name="e13"></a>  </p>
@@ -1005,21 +1007,23 @@ Gashkov S. B., Sergeev I. S. <i><font color="006030"> Algorithms for the fast Fo
 </div>
 
 <p> </p>
-
 <div class="cite">
 Gashkov S. B., Sergeev I. S. <i><font color="006030"> Complexity of computation of polynomials.</font></i> PTK'16 (Nizhny Novgorod, 2011).  <a href="./papers/slides2011.pdf">slides</a> (in Russian)
 </div>
 
 <p> </p>
-
 <div class="cite">
 Gashkov S. B., Sergeev I. S. <i><font color="006030"> On the arithmetic complexity of some linear mappings.</font></i> <a href="https://www.mathnet.ru/php/conference.phtml?confid=773&option_lang=eng">NTA'3</a> (Moscow, 2016).  <a href="./papers/slides2016.pdf">slides</a>
 </div>
 
 <p> </p>
-
 <div class="cite">
 Sergeev I. S. <i><font color="006030"> Complexity of linear boolean operators.</font></i> PTK'19 (online, 2021).  <a href="./papers/slides2021.pdf">slides</a> (in Russian)
+</div>
+
+<p> </p>
+<div class="cite">
+Sergeev I. S. <i><font color="006030"> Complexity of symmetric boolean functions.</font></i> DMTCS'11 (Moscow, 2023).  <a href="./papers/slides2023.pdf">slides</a> (in Russian)
 </div>
 
 
@@ -1035,7 +1039,7 @@ Gashkov S. B., Sergeev I. S. <i><font color="006030"> Complexity of computations
                         <td>  </td>
                         <td> <a href="./papers/programCC2012.pdf">program</a> </td>
                         <td>  </td>
-                </tr>        
+                </tr>
                 <tr>
                         <td> 1 </td>
                         <td> Addition chains </td>
@@ -1045,42 +1049,42 @@ Gashkov S. B., Sergeev I. S. <i><font color="006030"> Complexity of computations
                         <td> 2 </td>
                         <td> Adders </td>
                         <td> <a href="./papers/lection2.pdf">pdf</a> </td>
-                </tr>                
+                </tr>
                <tr>
                         <td> 3 </td>
                         <td> Discrete Fourier transform </td>
                         <td> <a href="./papers/lection3.pdf">pdf</a> </td>
-                </tr>   
+                </tr>
                <tr>
                         <td> 4.1-2 </td>
                         <td> Multiplication of numbers </td>
                         <td> <a href="./papers/lection4.pdf">pdf</a> </td>
-                </tr>     
+                </tr>
                <tr>
                         <td> 4.3 </td>
                         <td> F&#252rer's method </td>
                         <td> <a href="./papers/lection4f.pdf">pdf</a> </td>
-                </tr>                  
+                </tr>
                <tr>
                         <td> 5 </td>
                         <td> Division of numbers and polynomials </td>
                         <td> <a href="./papers/lection5.pdf">pdf</a> </td>
-                </tr>    
+                </tr>
                <tr>
                         <td> 6.2 </td>
                         <td> Logarithm and exponential </td>
                         <td> <a href="./papers/lection6e.pdf">pdf</a> </td>
-                </tr>  
+                </tr>
                <tr>
                         <td> 7 </td>
                         <td> GCD of polynomials </td>
                         <td> <a href="./papers/lection7.pdf">pdf</a> </td>
-                </tr>               
+                </tr>
                <tr>
                         <td> 8 </td>
                         <td> Factorial </td>
                         <td> <a href="./papers/lection8.pdf">pdf</a> </td>
-                </tr>                                                                       
+                </tr>
        </tbody>
 </table>
 
