--- a/index.html
+++ b/index.html
@@ -250,7 +250,9 @@ Matematicheskie Zametki</i>)
 </div>
 
 <div class="comm">
- &#9672 We adapt V. M. Khrapchenko's formula size lower bound method (1971) to <font face="serif"><i>k</i></font>-ary unate bases <font face="serif"><i>U<sub>k</sub></i></font> by introducing appropriate complexity measures on graphs. As a consequence, we obtain a new lower bound <font face="serif"><i>&#937</i>(<i>n</i><sup>1.53</sup>)</font> for the formula complexity of a linear boolean function of <font face="serif"><i>n</i></font> variables in the basis <font face="serif"><i>U</i><sub>3</sub></font> improving the result by H. Chockler and U. Zwick (2001). Also, we obtain an accurate form for the order of formula complexity of linear functions in bases <font face="serif"><i>U<sub>k</sub></i></font> as <font face="serif"><i>k</i>&#8594&#8734</font>.
+ &#9672 We adapt V. M. Khrapchenko's formula size lower bound method (1971) to <font face="serif"><i>k</i></font>-ary unate bases <font face="serif"><i>U<sub>k</sub></i></font> by introducing appropriate complexity measures on graphs. As a consequence, we obtain a new lower bound <font face="serif"><i>&#937</i>(<i>n</i><sup>1.53</sup>)</font> for the formula complexity of a linear boolean function of <font face="serif"><i>n</i></font> variables in the basis <font face="serif"><i>U</i><sub>3</sub></font> improving the result by H. Chockler and U. Zwick (2001). Also, we obtain an accurate form
+ <font face="serif"><i>n</i><sup>1+<i>&#920</i>(1/log <i>k</i>)</sup></font>
+ for the order of formula complexity of linear functions in bases <font face="serif"><i>U<sub>k</sub></i></font> as <font face="serif"><i>k</i>&#8594&#8734</font>.
  </div>
 
 <p> <a name="p38"></a> </p>
@@ -304,7 +306,7 @@ Matematicheskie Zametki</i>)
 </div>
 
 <div class="comm">
- &#9672 We propose a new exposition of a multilevel representation synthesis method invented by E. I. Nechiporik (1962) and provide an alternative proof for the asymptotic Shannon complexity of AC-circuits with free negations. A supplementary result to [<a href="#p30">30</a>].
+ &#9672 We propose a new exposition of a (modified) multilevel representation synthesis method invented by E. I. Nechiporik (1962) and provide an alternative proof for the asymptotic Shannon complexity of AC-circuits with free negations, an also some bounds for the bounded-depth version of the problem. A supplementary result to [<a href="#p30">30</a>].
 </div>
 
 <p> <a name="p35"></a></p>
@@ -341,7 +343,7 @@ Matematicheskie Zametki</i>)
 </div>
 
 <div class="comm">
- &#9672 We establish the monotone circuit complexity of the threshold-<font face="serif">2</font> symmetric boolean function of <font face="serif"><i>n</i></font> variables in an accurate form <font face="serif">2<i>n</i>+<i>&#920</i>(<i>n</i><sup>1/2</sup>)</font>, thus resolving an old problem by L. Adleman. Even tighter complexity result <font face="serif">3<i>n</i>+<i>O</i>(log <i>n</i>)-<i>O</i>(1)</font> we obtain for the threshold-<font face="serif">3</font> symmetric function improving a lower bound due to P. Dunne (1985). Basing on the method by A. C. Yao (1975) we provide accurate upper bounds on the complexity of symmetric functions with small thresholds.
+ &#9672 We establish the monotone circuit complexity of the threshold-<font face="serif">2</font> symmetric boolean function of <font face="serif"><i>n</i></font> variables in an accurate form <font face="serif">2<i>n</i>+<i>&#920</i>(<i>n</i><sup>1/2</sup>)</font>, thus resolving an old problem by L. Adleman. Even tighter complexity result <font face="serif">3<i>n</i>+<i>O</i>(log <i>n</i>)-<i>O</i>(1)</font> we obtain for the threshold-<font face="serif">3</font> symmetric function improving a lower bound due to P. Dunne (1985). Basing on the method by A. C. Yao (1975) we provide accurate upper bounds of the form <font face="serif">2<i>n</i>log<sub>2</sub><i>k</i>+<i>o</i>(<i>n</i>)</font> on the complexity of symmetric functions with small thresholds <font face="serif"><i>k</i></font>.
 
   <br> <i>Conference version</i>: in Proc. sDMA'13 (Moscow, 2019).
 </div>
@@ -384,7 +386,7 @@ Problemy Peredachi Informatsii</i>)
 </div>
 
 <div class="comm">
- &#9672 We show that conversions between binary and Fibonacci representations of <font face="serif"><i>n</i></font>-bit integer numbers may be implemented by boolean circuits of complexity <font face="serif"><i>O</i>(<i>M</i>(<i>n</i>)log <i>n</i>)</font>, where <font face="serif"><i>M</i>(<i>n</i>)</font> stands for the complexity of multiplication of <font face="serif"><i>n</i></font>-bit numbers, improving over a trivial complexity bound <font face="serif"><i>O</i>(<i>n</i><sup>2</sup>)</font>. We also obtain analogous results for generalized Fibonacci representations.
+ &#9672 We show that conversions between binary and Fibonacci representations of <font face="serif"><i>n</i></font>-bit integer numbers may be implemented by boolean circuits of complexity <font face="serif"><i>O</i>(<i>M</i>(<i>n</i>)log <i>n</i>)</font>, where <font face="serif"><i>M</i>(<i>n</i>)</font> stands for the complexity of multiplication of <font face="serif"><i>n</i></font>-bit numbers, improving over a trivial complexity bound <font face="serif"><i>O</i>(<i>n</i><sup>2</sup>)</font>. We also obtain analogous results for generalized Fibonacci representations, including <font face="serif"><i>k</i></font>-bonacci ones.
 </div>
 
 <p> <a name="e10"></a>  </p>
@@ -408,7 +410,7 @@ Problemy Peredachi Informatsii</i>)
 </div>
 
 <div class="comm">
- &#9672 We obtain a number of asymptotic results concerning the complexity of the class of boolean functions of <font face="serif"><i>n</i></font> variables by various types of AC circuits and formulas of bounded depth, improving e.g. earlier result by V. Dan&#269&#237k (1996). In particular, we show that the Shannon complexity of de Morgan AC-circuits is <font face="serif">~2<sup><i>n</i>/2+1</sup></font>, and it is achieved in depth <font face="serif">3</font> (this result is final). A principal ingredient of the proofs is a special covering of a boolean cube by what we call pseudospheres, that generalizes coverings by spheres.
+ &#9672 We obtain a number of asymptotic results concerning the complexity of the class of boolean functions of <font face="serif"><i>n</i></font> variables with respect to implementation by various types of AC circuits and formulas of bounded depth, improving e.g. earlier result by V. Dan&#269&#237k (1996). In particular, we show that the Shannon complexity of de Morgan AC-circuits is <font face="serif">~2<sup><i>n</i>/2+1</sup></font>, and it is achieved in depth <font face="serif">3</font> (this result is final). A principal ingredient of the proofs is a special covering of a boolean cube by what we call pseudospheres, that generalizes coverings by spheres.
 
   <br> <i>Conference version</i>: in Proc. DMTCS'10 (Moscow, 2018).
 </div>
