--- a/index.html
+++ b/index.html
@@ -1020,7 +1020,7 @@ Gashkov S. B., Sergeev I. S. <i><font color="006030"> On the arithmetic complexi
 
 <p> </p>
 <div class="cite">
-Sergeev I. S. <i><font color="006030"> Complexity of linear boolean operators.</font></i> PTK'19 (online, 2021).  <a href="./papers/slides2021.pdf">slides</a> (in Russian)
+Sergeev I. S. <i><font color="006030"> Complexity of boolean linear operators.</font></i> PTK'19 (online, 2021).  <a href="./papers/slides2021.pdf">slides</a> (in Russian)
 </div>
 
 <p> </p>
