--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@ algorithms etc.).
 </h3>
 
 
-<p> Most of my papers are available online, others can be freely accessed upon request via <a href="#email">email</a> </p>
+<p> Most of my papers are available online, others can be freely accessed upon request via <a href="#email">email</a>  </p>
+
+<!-- <a name="email">email</a><img src="./pics/email.jpg" width="200"> -->
 
 The list of my scientific papers is also available at
 <a href="https://scholar.google.com/citations?user=iIsjHwEAAAAJ&hl=en">Google Scholar</a>,
@@ -1092,8 +1094,7 @@ Gashkov S. B., Sergeev I. S. <i><font color="006030"> Complexity of computations
 
 <hr>
 
-<a name="email"></a>
-<img src="./pics/email.jpg" width="200">
+<b>email:</b> <a name="email"><img src="./pics/email.jpg" width="200"></a>
 
 <p> <a href="#top">return to the top</a> </p>
 
