--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ algorithms etc.).
                 <tr>
                         <td> 1981 </td>
                         <td> &#8211 </td>
-                        <td bgcolor ="#d0ff84"> my birhtplace is
+                        <td bgcolor ="#d0ff84"> my birthplace is
                                 <a href="https://en.wikipedia.org/wiki/Eberswalde">
                                 Eberswalde</a>
                                  (suburbs of Berlin);
@@ -693,7 +693,7 @@ Matematicheskie Zametki</i>)
 </div>
 
 <div class="comm">
- &#9672 We apply the idea by M. S. Paterson and U. Zwick (1993) of efficient generating low-depth compressor trees from compressing units with multiple-type inputs/outputs to constructing of low-size formulas for symmetric boolean functions and improve the previously known complexity bounds.
+ &#9672 We apply the idea by M. S. Paterson and U. Zwick (1993) of efficient generating low-depth compressor trees from compressing units with multiple-type inputs/outputs to constructing low-size formulas for symmetric boolean functions and improve the previously known complexity bounds.
 
 <br> &#8984 The obtained complexity bounds are further improved in [<a href="#p21">21</a>] and [<a href="#p25">25</a>].
  </div>
@@ -706,7 +706,7 @@ Matematicheskie Zametki</i>)
 </div>
 
 <div class="comm">
- &#9672 An improvement over the complexity bounds [<a href="#p11">11</a>] for exponential and raising to a power of complex or real power series. For instance, the former costs as much as <font face="serif">~23/12</font> same-size multiplications.
+ &#9672 An improvement over the complexity bounds [<a href="#p11">11</a>] for exponential and raising to a power of complex or real power series. The former costs as much as <font face="serif">~23/12</font> same-size multiplications, and the latter as <font face="serif">~27/8</font> multiplications.
  </div>
 
 <p> <a name="p16"></a></p>
@@ -878,8 +878,7 @@ Matematicheskie Zametki</i>)
 
 <div class="comm">
  &#9672 W. Baur and V. Strassen (1983) proved a classical relation <font face="serif"><b>C</b>(<i>&#8711 f</i>) &#8804 4<b>C</b>(<i>f</i>)</font> between the circuit complexity of a rational function <font face="serif"><i>f</i></font> and its gradient in the arithmetic basis <font face="serif">{ &#177,&#215, &#8260 }</font>.
- We improve it to <font face="serif"><b>C</b>(<i>&#8711 f</i>) &#8804 3<b>C</b>(<i>f</i>) + <i>n</i></font>, where <font face="serif"><i>n</i></font> is
- the number of variables.
+ We improve it to <font face="serif"><b>C</b>(<i>&#8711 f</i>) &#8804 3<b>C</b>(<i>f</i>) + <i>n</i></font>, where <font face="serif"><i>n</i></font> is the number of variables of <font face="serif"><i>f</i></font>.
  </div>
 
 <p> <a name="p5"></a></p>
@@ -898,7 +897,7 @@ Matematicheskie Zametki</i>)
  <br> <i>Conference version</i>: in Proc. SCCS'16 (Saint Petersburg, 2006).
 
   <br> &#8984 C. Umans (<a href="https://doi.org/10.1145/1374376.1374445">2008</a>) showed that the modular composition of degree-<font face="serif"><i>n</i></font> polynomials over the fields of characteristic
-  <font face="serif"><i>n</i><sup><i>o</i>(1)</sup></font> has almost linear complexity. This result lowers the complexity of algorithms for transitions in the fields of small characteristic to <font face="serif"><i>O</i>(<i>n</i><sup>1.63</sup>)</font> given the present-day (2023) bounds for rectangular matrix multiplication.
+  <font face="serif"><i>n</i><sup><i>o</i>(1)</sup></font> has almost linear complexity <font face="serif"><i>n</i><sup>1+<i>o</i>(1)</sup></font>. This result lowers the complexity of the algorithms for transitions in the fields of small characteristic to <font face="serif"><i>O</i>(<i>n</i><sup>1.63</sup>)</font> given the present-day (2023) bounds for rectangular matrix multiplication.
 </div>
 
 <p> <a name="c2"></a></p>
@@ -910,7 +909,7 @@ Matematicheskie Zametki</i>)
 </div>
 
 <div class="comm">
- &#9672 We obtain almost tight bounds for the minimal depth of a compressor tree composed of the standard <font face="serif">(3,2)</font>-compressors (carry-save adders). It constitutes a slight but practically meaningful improvement over the bounds by M. S. Paterson, N. Pippenger and U. Zwick (1992) in this particular case.
+ &#9672 We obtain almost tight bounds for the minimal depth of a compressor tree composed of the standard <font face="serif">(3,2)</font>-compressors (carry-save adders) in the full binary boolean basis. It constitutes a slight but practically meaningful improvement over the bounds by M. S. Paterson, N. Pippenger and U. Zwick (1992) in this particular case. Precisely, we bound the minimal depth <font face="serif"><i>d</i>(<i>n</i>)</font> of a compressor tree with <font face="serif"><i>n</i></font> inputs as <font face="serif"> log<sub><i>&#955</i></sub><i>n</i> &#8211; 2.7 < <i>d</i>(<i>n</i>) < log<sub><i>&#955</i></sub><i>n</i> &#8211; 0.8</font>, where <font face="serif"><i>&#955</i> &#8776; 1.205</font>.
 </div>
 
 <p> <a name="p4"></a></p>
