--- a/index.html
+++ b/index.html
@@ -180,6 +180,20 @@ The list of my scientific papers is also available at
    <a href="https://www.mathnet.ru/php/person.phtml?option_lang=eng&personid=27870">Mikhail I. Grinchuk</a>
 </p>
 
+<p> <a name="p42"></a> </p>
+
+<div class="cite">
+<font color="300080">[42]</font> Sergeev I. S. <i><font color="300080"> A lower bound on the monotone switching complexity of the threshold function <font face="serif">T<sub>n</sub><sup>n-1</sup></font>.</font></i>
+(submitted to <i>Diskretnaya matematika</i>)
+</div>
+
+<div class="comm">
+ &#9672 M. M. Halld&#243rsson, J. Radhakrishnan and K. V. Subrahmanyam (1993) proved a lower bound 
+ <font face="serif"><i>&#937</i>(<i>n</i> log log log <i>n</i>)</font>
+ on the complexity of computation of the threshold symmetric function <font face="serif"><i>T</i><sub><i>n</i></sub><sup><i>n</i>-1</sup></font> by monotone switching
+ (contact) networks. We improve this bound to <font face="serif"><i>&#937</i>(<i>n</i> log log <i>n</i>)</font> by a simpler argument.
+ </div>
+
 
 <p> <a name="p41"></a> </p>
 
