--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ The list of my scientific papers is also available at
 </div>
 
 <div class="comm">
- &#9672 M. M. Halld&#243rsson, J. Radhakrishnan and K. V. Subrahmanyam (1993) proved a lower bound 
+ &#9672 M. M. Halld&#243rsson, J. Radhakrishnan and K. V. Subrahmanyam (1993) proved a lower bound
  <font face="serif"><i>&#937</i>(<i>n</i> log log log <i>n</i>)</font>
  on the complexity of computation of the threshold symmetric function <font face="serif"><i>T</i><sub><i>n</i></sub><sup><i>n</i>-1</sup></font> by monotone switching
  (contact) networks. We improve this bound to <font face="serif"><i>&#937</i>(<i>n</i> log log <i>n</i>)</font> by a simpler argument.
@@ -371,6 +371,7 @@ Matematicheskie Zametki</i>)
     J. Applied and Industrial Math. 2019. <b>13</b>(4), 746-752.
     <a href="https://doi.org/10.1134/S1990478919040161">DOI</a> (translation of the
     <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=da&paperid=939&option_lang=eng">paper</a> from <i>Diskretnyi Analiz i Issledovanie Operatsii</i>)
+    PDF is available <a href="https://www.researchgate.net/publication/339033153_On_a_Relation_Between_the_Depth_and_Complexity_of_Monotone_Boolean_Formulas">here</a>
 </div>
 
 <div class="comm">
@@ -399,6 +400,7 @@ Matematicheskie Zametki</i>)
     <a href="https://doi.org/10.1134/S0032946018040038">DOI</a> (translation of the
     <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=ppi&paperid=2280&option_lang=eng">paper</a> from <i>
 Problemy Peredachi Informatsii</i>)
+    PDF is available <a href="https://www.researchgate.net/publication/330679605_On_the_Complexity_of_Fibonacci_Coding">here</a>
 </div>
 
 <div class="comm">
@@ -423,6 +425,7 @@ Problemy Peredachi Informatsii</i>)
     Discrete Mathematics and Applications. 2019. <b>29</b>(4), 241-254.
     <a href="https://doi.org/10.1515/dma-2019-0022">DOI</a> (translation of the
     <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=dm&paperid=1449&option_lang=eng">paper</a> (2018) from <i>Diskretnaya matematika</i>)
+    PDF is available <a href="https://www.researchgate.net/publication/335146153_On_the_complexity_of_bounded-depth_circuits_and_formulas_over_the_basis_of_unbounded_fan-in_gates">here</a>
 </div>
 
 <div class="comm">
