--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@ The list of my scientific papers is also available at
 
 <div class="cite">
 <font color="300080">[40]</font> Sergeev I. S. <i><font color="300080"> On the multiplicative complexity of polynomials.</font></i>   Diskretnaya Matematika (Discrete Mathematics). 2022. <b>34</b>(3), 85-89. <a href="https://doi.org/10.4213/dm1714">DOI</a>
-    PDF (in Russian) will be available on the
-    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=dm&paperid=1714&option_lang=eng">web-page</a> since October, 2023
+    PDF (in Russian) is available on the
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=dm&paperid=1714&option_lang=eng">web-page</a>
 </div>
 
 <div class="comm">
