--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
         <img align="right" src="./pics/2019_cr.jpg" width="25%" hspace="5px" vspace="5px">
 </h2>
 
+<p> pronounced as [<b>i</b>gor' serg<b>e</b>yev] </p>
+
 I'm a researcher in Theoretical computer science with the main focus of interests in the complexity of computations (circuit synthesis, fast
 algorithms etc.).
 
