--- a/index.html
+++ b/index.html
@@ -182,25 +182,11 @@ The list of my scientific papers is also available at
    <a href="https://www.mathnet.ru/php/person.phtml?option_lang=eng&personid=27870">Mikhail I. Grinchuk</a>
 </p>
 
+
 <p> <a name="p42"></a> </p>
 
 <div class="cite">
-<font color="300080">[42]</font> Sergeev I. S. <i><font color="300080"> A lower bound on the monotone switching complexity of the threshold function <font face="serif">T<sub>n</sub><sup>n-1</sup></font>.</font></i>
-(submitted to <i>Diskretnaya matematika</i>)
-</div>
-
-<div class="comm">
- &#9672 M. M. Halld&#243rsson, J. Radhakrishnan and K. V. Subrahmanyam (1993) proved a lower bound
- <font face="serif"><i>&#937</i>(<i>n</i> log log log <i>n</i>)</font>
- on the complexity of computation of the threshold symmetric function <font face="serif"><i>T</i><sub><i>n</i></sub><sup><i>n</i>-1</sup></font> by monotone switching
- (contact) networks. We improve this bound to <font face="serif"><i>&#937</i>(<i>n</i> log log <i>n</i>)</font> by a simpler argument.
- </div>
-
-
-<p> <a name="p41"></a> </p>
-
-<div class="cite">
-<font color="300080">[41]</font> Sergeev I. S. <i><font color="300080"> On the additive complexity of some number sequences.</font></i>
+<font color="300080">[42]</font> Sergeev I. S. <i><font color="300080"> On the additive complexity of some number sequences.</font></i>
 (submitted to <i>Matematicheskie Zametki</i>)
 </div>
 
@@ -209,6 +195,19 @@ The list of my scientific papers is also available at
 <font face="serif"><i>m</i>&times<i>n</i></font> matrices with bounded by <font face="serif"><i>q</i></font> coefficients in a linear term from
 <font face="serif"><i>A</i> + <i>O</i>(<i>m</i>+<i>n</i>)</font> to <font face="serif"><i>A</i> + <i>n</i></font>, where
 <font face="serif"><i>A</i> = min(<i>m</i>, <i>n</i>)log<sub>2</sub><i>q</i> + (1+<i>o</i>(1))<i>H</i>/log<sub>2</sub><i>H</i></font>, and <font face="serif"><i>H</i> = <i>mn</i>log<sub>2</sub><i>q</i></font>, and it is tight. Principally, it follows from [<a href="#p29">29</a>]. (ii) For the sequence <font face="serif">{2, 2<sup>2</sup>, ..., 2<sup><i>n</i>&#8211;1</sup>, 2<sup><i>n</i></sup>&#8211;1}</font>, we obtain a rather accurare complexity <font face="serif"><i>n</i> + (2<i>&#177o</i>(1))<i>n</i><sup>1/2</sup></font> improving the asymptotic of the `second term' in bounds by P. Downey, B. Leong, R. Sethi (1981). (iii) D. Dobkin and R. J. Lipton (1980) for an explicitly given polynomially bounded sequence of size <font face="serif"><i>n</i></font> proved a lower bound <font face="serif"><i>n</i> + <i>n</i><sup>2/3&#8211;<i>o</i>(1)</sup></font>. We construct explicit sequences of size <font face="serif"><i>n</i></font>: (a) of polynomially bounded numbers, and of complexity <font face="serif"><i>n</i> + <i>&#937</i>(<i>n</i><sup>1&#8211;<i>&#949</i></sup>)</font>, for any <font face="serif"><i>&#949</i>>0</font>; (b) of numbers bounded by <font face="serif"><i>n</i><sup><i>O</i>(log <i>n</i>)</sup></font>, and of complexity <font face="serif"><i>n</i> + <i>&#937</i>(<i>n</i>)</font>.
+ </div>
+ 
+ <p> <a name="p41"></a> </p>
+
+<div class="cite">
+<font color="300080">[41]</font> Sergeev I. S. <i><font color="300080"> A lower bound on the monotone switching complexity of the threshold function <font face="serif">T<sub>n</sub><sup>n-1</sup></font>.</font></i> Diskretnaya Matematika (Discrete Mathematics). 2023. <b>35</b>(4), 126-131. <a href="https://doi.org/10.4213/dm1789">DOI</a> (in Russian)
+</div>
+
+<div class="comm">
+ &#9672 M. M. Halld&#243rsson, J. Radhakrishnan and K. V. Subrahmanyam (1993) proved a lower bound
+ <font face="serif"><i>&#937</i>(<i>n</i> log log log <i>n</i>)</font>
+ on the complexity of computation of the threshold symmetric function <font face="serif"><i>T</i><sub><i>n</i></sub><sup><i>n</i>-1</sup></font> by monotone switching
+ (contact) networks. We improve this bound to <font face="serif"><i>&#937</i>(<i>n</i> log log <i>n</i>)</font> by a simpler argument.
  </div>
 
 <p> <a name="e13"></a>  </p>
@@ -219,7 +218,7 @@ The list of my scientific papers is also available at
 </div>
 
 <div class="comm">
- &#9672 For any <font face="serif"><i>n</i></font> and <font face="serif"><i>k</i></font>, we construct an explicit (that is, computable in polynomial time) example of a dence enough integer <font face="serif"><i>B<sub>k</sub></i></font>-sequence of size <font face="serif"><i>n</i></font> consisting of elements bounded by <font face="serif"><i>n</i><sup><i>k</i>+<i>o</i>(<i>k</i>)</sup></font>. It seems that in the case of growing <font face="serif"><i>k</i></font>'s, such examples were missed in literature. A fragment of [<a href="#p41">41</a>].
+ &#9672 For any <font face="serif"><i>n</i></font> and <font face="serif"><i>k</i></font>, we construct an explicit (that is, computable in polynomial time) example of a dence enough integer <font face="serif"><i>B<sub>k</sub></i></font>-sequence of size <font face="serif"><i>n</i></font> consisting of elements bounded by <font face="serif"><i>n</i><sup><i>k</i>+<i>o</i>(<i>k</i>)</sup></font>. It seems that in the case of growing <font face="serif"><i>k</i></font>'s, such examples were missed in literature. A fragment of [<a href="#p42">42</a>].
 </div>
 
 <p> <a name="e12"></a>  </p>
@@ -270,7 +269,7 @@ Matematicheskie Zametki</i>)
 <div class="comm">
  &#9672 We adapt V. M. Khrapchenko's formula size lower bound method (1971) to <font face="serif"><i>k</i></font>-ary unate bases <font face="serif"><i>U<sub>k</sub></i></font> by introducing appropriate complexity measures on graphs. As a consequence, we obtain a new lower bound <font face="serif"><i>&#937</i>(<i>n</i><sup>1.53</sup>)</font> for the formula complexity of a linear boolean function of <font face="serif"><i>n</i></font> variables in the basis <font face="serif"><i>U</i><sub>3</sub></font> improving the result by H. Chockler and U. Zwick (2001). Also, we obtain an accurate form
  <font face="serif"><i>n</i><sup>1+<i>&#920</i>(1/log <i>k</i>)</sup></font>
- for the order of formula complexity of linear functions in bases <font face="serif"><i>U<sub>k</sub></i></font> as <font face="serif"><i>k</i>&#8594&#8734</font>.
+ for the order of the formula complexity of linear functions in bases <font face="serif"><i>U<sub>k</sub></i></font> as <font face="serif"><i>k</i>&#8594&#8734</font>.
  </div>
 
 <p> <a name="p38"></a> </p>
