--- a/index.html
+++ b/index.html
@@ -183,6 +183,22 @@ The list of my scientific papers is also available at
 </p>
 
 
+<p> <a name="p43"></a> </p>
+
+<div class="cite">
+<font color="300080">[43]</font> Sergeev I. S. <i><font color="300080"> On the complexity of bounded-fanout parallel prefix circuits.</font></i>
+(submitted to <i>Diskretnyi Analiz i Issledovanie Operatsii</i>)
+</div>
+
+<div class="comm">
+ &#9672 We prove a lower bound <font face="serif">0.75(<i>n</i>&#8211;1)2<sup><i>n</i></sup></font> on the complexity of
+ a universal fanout-2 depth-<font face="serif"><i>n</i></font> prefix circuit on <font face="serif">2<sup><i>n</i></sup></font> inputs
+ improving over the previous lower bound <font face="serif">0.5(<i>n</i>+1&#8211;<i>o</i>(1))2<sup><i>n</i></sup></font> due to F. Fich (1983)
+ and getting closer to the upper bound <font face="serif">(<i>n</i>&#8211;0.5)2<sup><i>n</i></sup></font> by P. Kogge and H. Stone (1973).
+We also propose a number of simple constructions and upper complexity bounds on fanout-2 prefix circuits of depth <font face="serif"><i>n</i>+<i>k</i></font>,
+for small <font face="serif"><i>k</i></font>'s.
+</div>
+
 <p> <a name="p42"></a> </p>
 
 <div class="cite">
@@ -196,7 +212,7 @@ The list of my scientific papers is also available at
 <font face="serif"><i>A</i> + <i>O</i>(<i>m</i>+<i>n</i>)</font> to <font face="serif"><i>A</i> + <i>n</i></font>, where
 <font face="serif"><i>A</i> = min(<i>m</i>, <i>n</i>)log<sub>2</sub><i>q</i> + (1+<i>o</i>(1))<i>H</i>/log<sub>2</sub><i>H</i></font>, and <font face="serif"><i>H</i> = <i>mn</i>log<sub>2</sub><i>q</i></font>, and it is tight. Principally, it follows from [<a href="#p29">29</a>]. (ii) For the sequence <font face="serif">{2, 2<sup>2</sup>, ..., 2<sup><i>n</i>&#8211;1</sup>, 2<sup><i>n</i></sup>&#8211;1}</font>, we obtain a rather accurare complexity <font face="serif"><i>n</i> + (2<i>&#177o</i>(1))<i>n</i><sup>1/2</sup></font> improving the asymptotic of the `second term' in bounds by P. Downey, B. Leong, R. Sethi (1981). (iii) D. Dobkin and R. J. Lipton (1980) for an explicitly given polynomially bounded sequence of size <font face="serif"><i>n</i></font> proved a lower bound <font face="serif"><i>n</i> + <i>n</i><sup>2/3&#8211;<i>o</i>(1)</sup></font>. We construct explicit sequences of size <font face="serif"><i>n</i></font>: (a) of polynomially bounded numbers, and of complexity <font face="serif"><i>n</i> + <i>&#937</i>(<i>n</i><sup>1&#8211;<i>&#949</i></sup>)</font>, for any <font face="serif"><i>&#949</i>>0</font>; (b) of numbers bounded by <font face="serif"><i>n</i><sup><i>O</i>(log <i>n</i>)</sup></font>, and of complexity <font face="serif"><i>n</i> + <i>&#937</i>(<i>n</i>)</font>.
  </div>
- 
+
  <p> <a name="p41"></a> </p>
 
 <div class="cite">
