--- a/index.html
+++ b/index.html
@@ -262,6 +262,8 @@ for small <font face="serif"><i>k</i></font>'s.
  &#9672 We show that the multiplicative (nonscalar) complexity of the class of complex degree-<font face="serif"><i>d</i></font> polynomials of <font face="serif"><i>n</i></font> variables is of order <font face="serif"><i>n</i><sup>&#8968<i>d</i>/2&#8969</sup></font>, for constant <font face="serif"><i>d</i></font>, improving previously known lower bounds for odd <font face="serif"><i>d</i></font>'s. More accurate estimates are provided for the class of cubic polynomials.
 </div>
 
+<p> </p>
+
 <p> <a name="c20"></a> </p>
 
 <div class="cite">
@@ -325,6 +327,9 @@ Matematicheskie Zametki</i>)
 <div class="cite">
 <font color="300080">[37]</font> Jukna S., Seiwert H., Sergeev I. S. <i><font color="300080"> Reciprocal inputs in arithmetic and tropical circuits.</font></i>  Electronic Colloquium on Computational Complexity. 2020. TR20-178.  PDF is available on the
     <a href="https://eccc.weizmann.ac.il/report/2020/178/">web-page</a>
+    
+<br> also published in Russian in Matematicheskie Voprosy Kibernetiki (Mathematical Problems of Cybernetics). Vol. 20. Moscow: Fizmatlit, 2022, 61-80.    
+PDF is available on the <a href="https://keldysh.ru/mvk/index.php?id=vypusk-20">web-page</a>
 </div>
 
 <div class="comm">
