--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@ Matematicheskie Zametki</i>)
 <div class="cite">
 <font color="300080">[37]</font> Jukna S., Seiwert H., Sergeev I. S. <i><font color="300080"> Reciprocal inputs in arithmetic and tropical circuits.</font></i>  Electronic Colloquium on Computational Complexity. 2020. TR20-178.  PDF is available on the
     <a href="https://eccc.weizmann.ac.il/report/2020/178/">web-page</a>
-    
-<br> also published in Russian in Matematicheskie Voprosy Kibernetiki (Mathematical Problems of Cybernetics). Vol. 20. Moscow: Fizmatlit, 2022, 61-80.    
+
+<br> also published in Russian in Matematicheskie Voprosy Kibernetiki (Mathematical Problems of Cybernetics). Vol. 20. Moscow: Fizmatlit, 2022, 61-80.
 PDF is available on the <a href="https://keldysh.ru/mvk/index.php?id=vypusk-20">web-page</a>
 </div>
 
@@ -439,7 +439,7 @@ Problemy Peredachi Informatsii</i>)
 </div>
 
 <div class="comm">
- &#9672 M. W. Green (1969) and D. C. van Voorhis (about 1970) proposed the best known sorting networks for <font face="serif">16</font> elements with respect to the complexity (<font face="serif">60</font>) and to the depth (<font face="serif">9</font>), respectively. These networks have a rather intricate construction. We propose an explanation of ideas behind the structure of the networks.
+ &#9672 M. W. Green (1969) and D. C. van Voorhis (about 1970) proposed the best known sorting networks for <font face="serif">16</font> elements in terms of complexity (<font face="serif">60</font>) and depth (<font face="serif">9</font>), respectively. These networks have a rather intricate construction. We propose an explanation of ideas behind the structure of the networks.
 </div>
 
 <p> <a name="p30"></a> </p>
@@ -693,6 +693,8 @@ Matematicheskie Zametki</i>)
  &#9672 A full version of [<a href="#p14">14</a>]. We establish the exact complexity of the minimal width-<font face="serif">2<sup><i>n</i></sup></font> depth-<font face="serif"><i>n</i></font> general (parallel) prefix circuit improving over an earlier result by F. E. Fich (1982). It is <font face="serif">3.5&#183;2<sup><i>n</i></sup> &#8211; (8.5+3.5(<i>n</i> mod 2))2<sup>&#8970<i>n</i>/2&#8971</sup> + <i>n</i> + 5</font>. We also provide a number of new upper bounds on the complexity of parallel prefix circuits under various restrictions, and better (than general) upper bounds on the complexity of prefix XOR-circuits, e.g. <font face="serif">(36/11&#8211;<i>o</i>(1))<i>m</i></font> for width <font face="serif"><i>m</i></font> and minimal depth.
 
  <br> <i>Conference version</i>: in Proc. sDMA'10 (Moscow, 2010).
+ 
+ <br> &#8984 The case of bounded-by-2-fanout prefix circuits is examined in more detail in [<a href="#p43">43</a>].
 </div>
 
 <p> <a name="p17"></a></p>
@@ -800,7 +802,7 @@ Matematicheskie Zametki</i>)
 
 <div class="cite">
 <font color="300080">[13, e9]</font> Grinchuk M. I., Sergeev I. S. <i><font color="300080"> Thin circulant matrices and lower bounds on the complexity of some Boolean operators. </font></i> arXiv ePrints. 2017. Art. 1701.08557.
-    <a href="https://doi.org/10.48550/arXiv.1701.08557">DOI</a> (self-translation of a
+    <a href="https://doi.org/10.48550/arXiv.1701.08557">DOI</a> (self-translation of the
     <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=da&paperid=664&option_lang=eng">paper</a> (2011) from <i>Diskretnyi Analiz i Issledovanie Operatsii</i>) <a href="./papers/1701.08557v1.pdf">PDF</a>
 </div>
 
